--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "huge_file_sorter",
   "version": "1.0.0",
   "description": "program sorts huge files on low-performance computers",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
